Changed FROM image

--- a/serverless-app/src/main/resources/application.properties
+++ b/serverless-app/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+quarkus.jib.base-jvm-image=openjdk:21-jdk-slim
+
 quarkus.container-image.registry=docker.io
 quarkus.container-image.group=eldermoraes
 quarkus.container-image.name=serverless-app
