--- a/serverless-app/src/main/docker/Dockerfile.jvm
+++ b/serverless-app/src/main/docker/Dockerfile.jvm
@@ -77,7 +77,8 @@
 #   accessed directly. (example: "foo.example.com,bar.example.com")
 #
 ###
-FROM registry.access.redhat.com/ubi8/openjdk-17:1.18
+# FROM registry.access.redhat.com/ubi8/openjdk-17:1.18
+FROM eclipse-temurin:23-jdk-alpine
 ENV LANGUAGE='en_US:en'
 
 
@@ -92,5 +93,6 @@ USER 185
 ENV JAVA_OPTS_APPEND="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
 ENV JAVA_APP_JAR="/deployments/quarkus-run.jar"
 
-ENTRYPOINT [ "/opt/jboss/container/java/run/run-java.sh" ]
+# ENTRYPOINT [ "/opt/jboss/container/java/run/run-java.sh" ]
+ENTRYPOINT ["/__cacert_entrypoint.sh"]
 
