Changed FROM image

--- a/serverless-app/src/main/resources/application.properties
+++ b/serverless-app/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.jib.base-jvm-image=openjdk:21-jdk-slim
+quarkus.jib.base-jvm-image=eclipse-temurin:23-jdk-alpine
 
 quarkus.container-image.registry=docker.io
 quarkus.container-image.group=eldermoraes
