--- a/serverless-app/src/main/docker/Dockerfile.jvm
+++ b/serverless-app/src/main/docker/Dockerfile.jvm
@@ -94,3 +94,5 @@ ENV JAVA_OPTS_APPEND="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=or
 ENV JAVA_APP_JAR="/deployments/quarkus-run.jar"
 
 # ENTRYPOINT [ "/opt/jboss/container/java/run/run-java.sh" ]
+
+CMD ["java","-jar","/deployments/quarkus-run.jar"]
